# reflow

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  reflow.code-workspace
boards/: freertos_cm4.cmake  libopencm3_stmf4.cmake  segger_rtt.cmake
cmake/: file_to_binary.cmake  utilities.cmake
cmake/boards/: boards.cmake  esp32.cmake  libopencm3_stmf4.cmake  sdkconfig.defaults
cmake/lib/: freertos_cm4.cmake
examples/: CMakeLists.txt
examples/esp32/rest_server/: CMakeLists.txt  main.c
ld/: stm32f411ce.ld
lib/ili9341/: ili9341.c  ili9341.h
lib/yuck/: CMakeLists.txt  Kconfig.proj
lib/yuck/common/: scheduler.c
lib/yuck/common/yuck/: api.h  list.h  scheduler.h  yuck.h
lib/yuck/display/ili9341/: CMakeLists.txt  ili9341.c
lib/yuck/display/ili9341/yuck/ili9341/: ili9341.h
lib/yuck/display/ssd1306/: CMakeLists.txt  ssd1306.c
lib/yuck/display/ssd1306/yuck/ssd1306/: ssd1306.h
lib/yuck/motor/drv8825/: CMakeLists.txt  drv8825.c
lib/yuck/motor/drv8825/yuck/drv8825/: drv8825.h
lib/yuck/ports/esp32/: yuck_impl.h
lib/yuck/server/rest_server/: CMakeLists.txt  drv8825.c
lib/yuck/server/rest_server/yuck/rest_server/: rest_server.h
scripts/: toolchain_arm_none_eabi.cmake
src/: CMakeLists.txt  aglaea_bmp.c  display.h  freertos_hooks.c  i2c_display.c  main.c  retarget.c  spi_display.c
src/board/esp32/: board.h  yuck_common.c
src/driver/: driver.h  gpio.h  i2c.h  init.h  spi.h
src/driver/esp32/: CMakeLists.txt  gpio.c  i2c.c  init.c  spi.c
src/driver/stm32/: SEGGER_RTT_Conf.h  display.c  init.c  pwm.c  pwm.h  uart.c  uart.h
src/include/: FreeRTOSConfig.h
trading/: alpaca.js  package.json  server.js
